2019-1/221/users/4102/executions/1579_1559.log
== TEST (2019-03-13 20:48:46) 
-- CODE:
print(".upper(Ada Lovelace) foi a primeira programadora da historia".)
-- ERROR:
File "XXXX", line 1
    print(".upper(Ada Lovelace) foi a primeira programadora da historia".)
                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:49:17) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia".upper(Ada Lovelace))
-- ERROR:
File "XXXX", line 1
    print("Ada Lovelace foi a primeira programadora da historia".upper(Ada Lovelace))
                                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:49:56) 
-- CODE:
print("Ada Lovelace.upper() foi a primeira programadora da historia."
-- ERROR:
File "XXXX", line 2
    
                                                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:50:04) 
-- CODE:
print("Ada Lovelace.upper() foi a primeira programadora da historia.")
-- OUTPUT:
Ada Lovelace.upper() foi a primeira programadora da historia.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:50:49) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:58:15) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.14502
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
